--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,6 +2,11 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.title {
+  text-align: center;
+  margin-bottom: 32px;
+}
+
 img {
   width: 100px;
   height: 100px;
@@ -10,6 +15,21 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+}
+
+.card {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  width: 200px;
+}
+
+.card-container {
+  display: flex;
+  gap: 52px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 /* do not edit this footer */
